--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -40,7 +40,7 @@
     "tooltip.item.gender":{
         "en":"Required Gender",
         "fr":"Genre Requis",
-        "es":"Sexo requiredo",
+        "es":"Sexo requerido",
         "zh-cn":"性别限制",
         "zh-tw":"",
         "kr":"",
@@ -78,13 +78,13 @@
     "tooltip.item.spiritLevel":{
         "en":"Spirit Lv",
         "fr":"Nv Esprit",
-        "es":"",
+        "es":"Nivel Espíritu",
         "zh-cn":"精灵等级",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Geisterlevel",
         "jp":"",
         "pt":"",
         "vi":"Cấp Tinh Linh",
@@ -97,13 +97,13 @@
     "tooltip.item.spiritSoulLevel":{
         "en":"Soul Lv",
         "fr":"Nv d'Âme",
-        "es":"",
+        "es":"Nivel Ama",
         "zh-cn":"精魂等级",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Seelenlevel",
         "jp":"",
         "pt":"",
         "vi":"Cấp Linh Hồn",
@@ -116,13 +116,13 @@
     "tooltip.item.spiritAptitude":{
         "en":"APT",
         "fr":"APT",
-        "es":"",
+        "es":"APT",
         "zh-cn":"资质",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"APT",
         "jp":"",
         "pt":"",
         "vi":"T.Chất",
@@ -135,13 +135,13 @@
     "tooltip.item.spirit.talent.title":{
         "en":"Spirit Talent",
         "fr":"Talent d'Esprit",
-        "es":"",
+        "es":"Talento Espíritu",
         "zh-cn":"精灵天赋",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Geistertalent",
         "jp":"",
         "pt":"",
         "vi":"Thiên Phú Tinh Linh",
@@ -154,13 +154,13 @@
     "tooltip.item.spirit.talent.left":{
         "en":"Points Left",
         "fr":"Points Restants",
-        "es":"",
+        "es":"Puntos Sobrantes",
         "zh-cn":"剩余点数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Verbleibende Punkte",
         "jp":"",
         "pt":"",
         "vi":"Điểm Còn Lại",
@@ -198,7 +198,7 @@
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"Verzauberungen Stats",
+        "de":"Verbesserungsstats",
         "jp":"",
         "pt":"",
         "vi":"Thuộc Tính Cường Hóa",
@@ -210,14 +210,14 @@
     },
     "tooltip.item.bonus-reward":{
         "en":"Bonus Reward",
-        "fr":"Récompenses Bonus",
-        "es":"",
+        "fr":"Récompense Bonus",
+        "es":"Recompensa Adicional",
         "zh-cn":"赏金奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Bonus-Belohnung",
         "jp":"",
         "pt":"",
         "vi":"Thưởng Thêm",
@@ -230,13 +230,13 @@
     "tooltip.item.maxCarried":{
         "en":"Max Items Carried",
         "fr":"Maximum Transporté",
-        "es":"",
+        "es":"Artículos Máximos Transportados",
         "zh-cn":"物品携带上限",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Maximale Anzahl an Items",
         "jp":"",
         "pt":"",
         "vi":"Lượng Vật Mang Tối Đa",
@@ -255,7 +255,7 @@
         "kr":"",
         "ru":"Пассивный",
         "tr":"",
-        "de":"Passive",
+        "de":"Passiv",
         "jp":"",
         "pt":"",
         "vi":"Bị Động",
@@ -274,7 +274,7 @@
         "kr":"",
         "ru":"{0} сек перезарядка",
         "tr":"",
-        "de":"{0} sek Abklingzeit",
+        "de":"{0} Sek Abklingzeit",
         "jp":"",
         "pt":"",
         "vi":"{0} giây hồi chiêu",
@@ -312,7 +312,7 @@
         "kr":"",
         "ru":"Нацелится",
         "tr":"",
-        "de":"Setzte als Ziel",
+        "de":"Anvisieren",
         "jp":"",
         "pt":"",
         "vi":"Chọn Làm Mục Tiêu",
@@ -325,7 +325,7 @@
     "tooltip.player-menu.whisper":{
         "en":"Whisper",
         "fr":"Chuchoter",
-        "es":"Susurro",
+        "es":"Susurrar",
         "zh-cn":"密语",
         "zh-tw":"",
         "kr":"",
@@ -344,7 +344,7 @@
     "tooltip.player-menu.copy-name":{
         "en":"Copy name",
         "fr":"Copier le nom",
-        "es":"Copia Nombre",
+        "es":"Copiar el nombre",
         "zh-cn":"复制姓名",
         "zh-tw":"",
         "kr":"",
@@ -363,13 +363,13 @@
     "tooltip.player-menu.group-invite-to-join":{
         "en":"Invite Group",
         "fr":"Inviter Groupe",
-        "es":"Grupo de Invitación",
+        "es":"Invitar al Grupo",
         "zh-cn":"邀请组队",
         "zh-tw":"",
         "kr":"",
         "ru":"Пригласить в группу",
         "tr":"",
-        "de":"Einladen in Gruppe",
+        "de":"Einladen in die Gruppe",
         "jp":"",
         "pt":"",
         "vi":"Mời Vào Nhóm",
@@ -382,7 +382,7 @@
     "tooltip.player-menu.group-set-new-leader":{
         "en":"Set new leader",
         "fr":"Changer leader",
-        "es":"Establecer un nuevo líder",
+        "es":"Establecer un nuevo jefe",
         "zh-cn":"设为队长",
         "zh-tw":"",
         "kr":"",
@@ -420,7 +420,7 @@
     "tooltip.player-menu.group-leave":{
         "en":"Leave group",
         "fr":"Partir du groupe",
-        "es":"Deje el grupo",
+        "es":"Dejar el grupo",
         "zh-cn":"离开队伍",
         "zh-tw":"",
         "kr":"",
@@ -458,13 +458,13 @@
     "tooltip.player-menu.check-gear":{
         "en":"Check Gear",
         "fr":"Inspecter",
-        "es":"",
+        "es":"Comprobar equipo",
         "zh-cn":"查看装备",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"(Ausrüstung) Überprüfen",
         "jp":"",
         "pt":"",
         "vi":"Kiểm Đồ",
@@ -477,13 +477,13 @@
     "tooltip.player-menu.guild-invite":{
         "en":"Invite Guild",
         "fr":"Inviter Guilde",
-        "es":"",
+        "es":"Invitar al Gremio",
         "zh-cn":"邀请入会",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"In die Gilde einladen",
         "jp":"",
         "pt":"",
         "vi":"Mời Công Hội",
@@ -496,13 +496,13 @@
     "tooltip.player-menu.add-friend":{
         "en":"Add friend",
         "fr":"Ajouter amis",
-        "es":"",
+        "es":"Anadir amigos",
         "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Freund hinzufügen",
         "jp":"",
         "pt":"",
         "vi":"Thêm Bạn Bè",
@@ -515,13 +515,13 @@
     "tooltip.player-menu.remove-friend":{
         "en":"Remove friend",
         "fr":"Retirer amis",
-        "es":"",
+        "es":"Remover amigos",
         "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Freund entfernen",
         "jp":"",
         "pt":"",
         "vi":"Xóa Bạn Bè",
@@ -534,13 +534,13 @@
     "tooltip.player-menu.add-foe":{
         "en":"Add foe",
         "fr":"Ajouter ennemis",
-        "es":"",
+        "es":"Anadir Enemigo",
         "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Feind hinzufügen",
         "jp":"",
         "pt":"",
         "vi":"Thêm Kẻ Thù",
@@ -553,13 +553,13 @@
     "tooltip.player-menu.remove-foe":{
         "en":"Remove foe",
         "fr":"Retirer ennemis",
-        "es":"",
+        "es":"Remover enemigo",
         "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Feind entfernen",
         "jp":"",
         "pt":"",
         "vi":"Xóa Kẻ Thù",
@@ -572,13 +572,13 @@
     "tooltip.player-menu.add-blocked":{
         "en":"Block",
         "fr":"Bloquer",
-        "es":"",
+        "es":"Bloquear",
         "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Blockieren",
         "jp":"",
         "pt":"",
         "vi":"Chặn",
@@ -591,13 +591,13 @@
     "tooltip.player-menu.remove-block":{
         "en":"Unblock",
         "fr":"Débloquer",
-        "es":"",
+        "es":"Desbloquear",
         "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Deblockieren",
         "jp":"",
         "pt":"",
         "vi":"Bỏ Chặn",
@@ -610,13 +610,13 @@
     "tooltip.stat.baseValue":{
         "en":"Base attribute value: {0}",
         "fr":"Valeur de base de l'attribut: {0}",
-        "es":"",
+        "es":"Valor del atributo base: {0}",
         "zh-cn":"基本属性值: {0}",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Basis-Attributwert: {0}",
         "jp":"",
         "pt":"",
         "vi":"Giá trị thuộc tính gốc: {0}",
@@ -629,13 +629,13 @@
     "tooltip.stat.upStuffPct":{
         "en":"Additional gain from equipment: {0}%",
         "fr":"Gain supplémentaire de l'équipement: {0}%",
-        "es":"",
+        "es":"Ganancia adicional por equipos: {0}%",
         "zh-cn":"装备额外加成: {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Zusätzlicher Gewinn durch Ausrüstung: {0}%",
         "jp":"",
         "pt":"",
         "vi":"Cộng thêm nhận được từ trang bị: {0}%",
@@ -648,13 +648,13 @@
     "tooltip.stat.upPassivePct":{
         "en":"Additional gain from talents: {0}%",
         "fr":"Gain supplémentaire des talents: {0}%",
-        "es":"",
+        "es":"Ganancia adicional por talentos: {0}%",
         "zh-cn":"天赋额外加成: {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Zusätzlicher Gewinn durch Talente: {0}%",
         "jp":"",
         "pt":"",
         "vi":"Cộng thêm nhận được từ thiên phú: {0}%",
@@ -667,13 +667,13 @@
     "tooltip.stat.upBuffPct":{
         "en":"Additional gain from buffs: {0}%",
         "fr":"Gain supplémentaire des buffs: {0}%",
-        "es":"",
+        "es":"Ganancia adicional por buffs: {0}%",
         "zh-cn":"状态额外加成: {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Zusätzlicher Gewinn durch Buffs: {0}%",
         "jp":"",
         "pt":"",
         "vi":"Cộng thêm nhận được từ lợi ích ngoài: {0}%",
