--- a/Translation/general.json
+++ b/Translation/general.json
@@ -171,7 +171,7 @@
         "id":"Exp"
     },
     "general.POINT.ELEMENTS_EXP":{
-        "en":"Element-Exp",
+        "en":"Element Exp",
         "fr":"Exp Élémentaire",
         "es":"Elemento EXP",
         "zh-cn":"元素经验",
