--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1512,7 +1512,7 @@
         "de":"Öffnen",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mở",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1531,7 +1531,7 @@
         "de":"Löschen",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xóa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1550,7 +1550,7 @@
         "de":"Beginnen",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bắt Đầu",
         "ar":"",
         "it":"",
         "pl":"",
