--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10048,7 +10048,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàng Kim Pegasus",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10067,7 +10067,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pandora",
         "ar":"",
         "it":"",
         "pl":"",
