--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5711,7 +5711,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nghịch Thiên ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5730,7 +5730,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tự mình nhảy vào kẽ hở mở ra từ thế lực thần bí từ sâu bên dưới tòa Viêm Ma Tháp và thách thức những sinh vật đến từ thế giới chưa từng được người sống ở trong thành Cain khám phá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5958,7 +5958,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6091,7 +6091,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tầng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8238,7 +8238,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8257,7 +8257,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn có thể chọn những tầng vực thẳm đã hoàn thành trước khi tiến vào.<br>Tầng cao nhất bạn có thể tới: {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8276,7 +8276,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ác Mộng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8295,7 +8295,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kinh Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8314,7 +8314,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tuyệt Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8333,7 +8333,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tử Thần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8352,7 +8352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chọn Tầng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8371,7 +8371,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tầng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8390,7 +8390,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trạng Thái",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8409,7 +8409,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thu Chọn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8428,7 +8428,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn Tác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8447,7 +8447,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Tầng {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8466,7 +8466,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Tiên Đoán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8485,7 +8485,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Thách Thức",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8504,7 +8504,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Thực Tập",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8523,7 +8523,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Mạo Hiểm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8542,7 +8542,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Thần Bí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8561,7 +8561,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Nghiền Nát",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8580,7 +8580,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Bậc Thầy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8599,7 +8599,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Cai Quản",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8618,7 +8618,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Thiên Tinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8637,7 +8637,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vực Thẳm Bình Minh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8656,7 +8656,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ác Mộng Truyền Lời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8675,7 +8675,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ác Mộng Chi Phối",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8694,7 +8694,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ác Mộng Kinh Hãi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8713,7 +8713,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ác Mộng Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8732,7 +8732,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộng Ảo Hoang Tưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8751,7 +8751,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộng Ảo Thao Túng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8770,7 +8770,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộng Ảo Tự Tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8789,7 +8789,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộng Ảo Chúa Tể",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8808,7 +8808,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kẻ Hành Quyết",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8827,7 +8827,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bàn Tay Che Chở",
         "ar":"",
         "it":"",
         "pl":"",
