--- a/Translation/item.json
+++ b/Translation/item.json
@@ -19639,6 +19639,44 @@
 		"th": "",
 		"id": ""
 	},
+	"item.73001.name": {
+		"en": "Gender Transmutation",
+		"fr": "Transmutation de Genre",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.73001.use.gender.error": {
+		"en": "Error, You have an item equipped that is tied to specific gender. You must unequip it before using this item.",
+		"fr": "Erreur, vous avez un objet équipé qui est lié à un genre spécifique. Vous devez le déséquiper avant d'utiliser cet objet.",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
     "item.1200.description":{
         "en":"I'm pursuing speed",
         "fr":"je recherche la vitesse",
