--- a/Translation/item.json
+++ b/Translation/item.json
@@ -19651,8 +19651,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
-		"ar": "",
+		"vi": "Chuyển Giới Tính",
 		"it": "",
 		"pl": "",
 		"th": "",
@@ -19670,7 +19669,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Lỗi, Bạn đang trang bị một vật phẩm được gắn với một giới tính cụ thể. Bạn phải cởi bỏ trang bị trước khi sử dụng vật phẩm này.",
 		"ar": "",
 		"it": "",
 		"pl": "",
