Battlefield list UI

--- a/Translation/event.json
+++ b/Translation/event.json
@@ -131,5 +131,62 @@
         "pl":"11:00-12:00 19:00-20:00 (GMT+1)",
         "th":"17:00-18:00 01:00-02:00 (GMT+7)",
         "id":"03:00-04:00 11:00-12:00 (GMT-7)"
+    },
+    "event.BATTLEFIELD.title":{
+        "en":"Battlefield",
+        "fr":"Champ de bataille",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.description-1":{
+        "en":"EXP, Token",
+        "fr":"EXP, Coupon",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.description-2":{
+        "en":"Time (GMT+0): 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
+        "fr":"Horaires(GMT+1): 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
+        "es":"Horarios(GMT+1): 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
+        "zh-cn":"(GMT+8) 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
+        "zh-tw":"",
+        "kr":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+9)",
+        "ru":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+3)",
+        "tr":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+3)",
+        "de":"Zeiten: 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
+        "jp":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+9)",
+        "pt":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+0)",
+        "vi":"Thời Gian: 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+7)",
+        "ar":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-6)",
+        "it":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-1)",
+        "pl":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
+        "th":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+7)",
+        "id":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-7)"
     }
 }
