--- a/Translation/event.json
+++ b/Translation/event.json
@@ -56,6 +56,44 @@
         "th":"",
         "id":"Tidak aktif"
     },
+    "event.btn.register":{
+        "en":"Register",
+        "fr":"S'inscrire",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.btn.unregister":{
+        "en":"Unregister",
+        "fr":"Se désinscrire",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "event.btn.introduction":{
         "en":"Intro.",
         "fr":"Intro.",
