--- a/Translation/event.json
+++ b/Translation/event.json
@@ -226,5 +226,43 @@
         "pl":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
         "th":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+7)",
         "id":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-7)"
+    },
+    "event.BATTLEFIELD.score.team-ally":{
+        "en":"Ally",
+        "fr":"Allié",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.score.team-ennemy":{
+        "en":"Enemy",
+        "fr":"Ennemi",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
