--- a/Translation/event.json
+++ b/Translation/event.json
@@ -264,5 +264,62 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "event.BATTLEFIELD.overlay.table.team":{
+        "en":"Team",
+        "fr":"Equipe",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.overlay.table.flag":{
+        "en":"Flag",
+        "fr":"Drapeau",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.overlay.table.score":{
+        "en":"Score",
+        "fr":"Score",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
