--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13494,6 +13494,82 @@
         "th":"",
         "id":""
     },
+    "item.10517.name":{
+        "en":"[D]Halo Metal Piece",
+        "fr":"[D]Pièce de Métal du Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10518.name":{
+        "en":"[C]Halo Metal Piece",
+        "fr":"[C]Pièce de Métal du Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10519.name":{
+        "en":"[B]Halo Metal Piece",
+        "fr":"[B]Pièce de Métal du Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10520.name":{
+        "en":"[A]Halo Metal Piece",
+        "fr":"[A]Pièce de Métal du Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.11000.name":{
         "en":"Energy Essence (Minor)",
         "fr":"Essence d'Energie (Mineure)",
